Solved Balance Transfer Div Spacing Issue

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1964,7 +1964,7 @@ body {background:#eee;}
   .txt-title1 {font-weight:bold; text-transform:uppercase; border-right:1px solid #ddd;}
   .error-template img {margin:auto; }
   .heigh-bt {height:300px; box-shadow:1px 1px 1px 1px #ccc; border-radius:5px;-moz-border-radius:5px;-webkit-border-radius:5px;}
-   .heigh-bt2 {height:390px; box-shadow:1px 1px 1px 1px #ccc;}
+   .heigh-bt2 {height:auto; box-shadow:1px 1px 1px 1px #ccc;}
    .heigh-bt1  {height:auto; box-shadow:1px 1px 1px 1px #ccc;}
   .mrg-tp {margin-top:8px;}
   .box-shadow {box-shadow:1px 1px 1px 1px #ccc;}
